Closed
Bug 323852
Opened 20 years ago
Closed 20 years ago
redirect after a prefetch does not include X-moz: prefetch header
Categories
(Core :: Networking, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha1
People
(Reporter: joshprogramming, Assigned: darin.moz)
Details
(Keywords: fixed1.8.0.2, fixed1.8.1, Whiteboard: [rft-dl])
Attachments
(1 file)
|
2.29 KB,
patch
|
Biesinger
:
review+
bzbarsky
:
superreview+
benjamin
:
approval-branch-1.8.1+
dveditz
:
approval1.8.0.2+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8) Gecko/20051111 Firefox/1.5
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8) Gecko/20051111 Firefox/1.5
I'm not entirely sure this is a bug or a design decision, but I could not find any information on this in bugzilla or via google.
I've noticed when surfing Google and it prefetches a site, that it will send the 'X-moz: prefetch' header. However, if the url it fetches is a redirect it does not include this 'X-moz' header when accessing the redirect page.
Reproducible: Always
Steps to Reproduce:
You should be able to just setup a prefetched link in some html that points to a url that redirects to another page. On the second access in the prefetch process you will see that 'X-moz: prefetch' is not included in the header.
Something like:
<link rel="prefetch" href="http://www.xyz.com/">
and let's say http://www.xyz.com/ redirects to: http://www.xyz.com/mypage.html
Actual Results:
No X-moz header sent for mypage.html.
Expected Results:
I think the X-moz header might need to be there.
Updated•20 years ago
|
Assignee: nobody → darin
Component: General → Networking
Product: Firefox → Core
QA Contact: general → benc
Version: unspecified → 1.8 Branch
| Assignee | ||
Updated•20 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → mozilla1.9alpha
Version: 1.8 Branch → Trunk
| Assignee | ||
Comment 1•20 years ago
|
||
Simple patch. I also noticed that nsPrefetchService::mCurrentChannel is not updated when we process a redirect. I think it should be updated since nsPrefetchService::StopProcessing calls Cancel on mCurrentChannel.
Attachment #209444 -
Flags: superreview?(bzbarsky)
Attachment #209444 -
Flags: review?(cbiesinger)
Updated•20 years ago
|
Attachment #209444 -
Flags: superreview?(bzbarsky) → superreview+
Comment 2•20 years ago
|
||
Comment on attachment 209444 [details] [diff] [review]
v1 patch
+ // HTTP request headers are not automatically forwarded to the new channel.
maybe there should be a way to do that though... but ok, r=biesi
Attachment #209444 -
Flags: review?(cbiesinger) → review+
| Assignee | ||
Comment 3•20 years ago
|
||
> maybe there should be a way to do that though... but ok, r=biesi
yeah, this is not the first time we've hit a problem like this.
| Assignee | ||
Comment 4•20 years ago
|
||
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•20 years ago
|
Attachment #209444 -
Flags: approval1.8.1?
Attachment #209444 -
Flags: approval1.8.0.2?
Updated•20 years ago
|
Attachment #209444 -
Flags: approval1.8.1? → branch-1.8.1+
Comment 6•20 years ago
|
||
Comment on attachment 209444 [details] [diff] [review]
v1 patch
approved for 1.8.0 branch, a=dveditz
Attachment #209444 -
Flags: approval1.8.0.2? → approval1.8.0.2+
Updated•20 years ago
|
Flags: blocking1.8.0.2+
Comment 8•20 years ago
|
||
Marking [rft-dl] (ready for testing in Firefox 1.5.0.2 release candidates). Whoever tests this, please attach the html page with the prefetch link to this bug as a testcase
Whiteboard: [rft-dl]
You need to log in
before you can comment on or make changes to this bug.
Description
•