fixes bug 323852 "redirect after a prefetch does not include X-moz: prefetch header" r=biesi sr=bzbarsky